--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "import": "./dist/index.mjs",
-      "require": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "require": "./dist/index.js"
     }
   },
   "files": [
@@ -38,6 +38,7 @@
     "vue": ">=3.2.0"
   },
   "devDependencies": {
+    "@types/node": "^25.1.0",
     "axios": "^1.7.9",
     "element-plus": "^2.9.4",
     "tsup": "^8.0.1",
